# rust-fullstack-workshop

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml
api/: api.http
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
api/shuttle/static/: index.html
front/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
front/assets/: tailwind.css
front/src/: main.rs
front/src/components/: button.rs  film_card.rs  film_modal.rs  footer.rs  header.rs  mod.rs
front/src/models/: button.rs
shared/: Cargo.toml
shared/src/: models.rs
