[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
backend = ["sqlx"]

[dependencies]
uuid = { version = "1.13.1", features = ["serde", "v4", "js"] }
chrono = {version = "0.4.39", features = ["serde"]}
serde = {version = "1.0.217", features = ["derive"]}
sqlx = {version = "0.8.3", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json"
], optional = true}