[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
shared = {path = "../../shared", features = ["backend"]}
sqlx = {version = "0.8.3", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}
tracing = "0.1.41"
serde = "1.0.217"
serde_json = "1.0.138"
async-trait = "0.1.86"
uuid = {version = "1.13.1", features = ["serde", "v4", "js"]}

[dev-dependencies]
actix-rt = "2.10.0"
