[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.52.0"
shuttle-runtime = { package = "shuttle-runtime", version = "0.52.0", features = ["default"] }
shuttle-shared-db = {version = "0.52.0", features = ["postgres", "sqlx"]}
sqlx = {version = "0.8.3", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
]}
tokio = "1.26.0"
tracing = "0.1.41"
api-lib = {path = "../lib"}
